<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.mycore</groupId>
    <artifactId>mycore-parent</artifactId>
    <version>57</version>
    <relativePath />
  </parent>

  <groupId>de.uni-jena.thulb.ubo</groupId>
  <artifactId>ThUniBib</artifactId>
  <version>dev-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>UBO ThUniBib</name>
  <description>Thüringer Universitäts-Bibliographien</description>
  <url>...</url>
  <inceptionYear>2019</inceptionYear>
  <scm>
    <url>git@github.com:ThULB/ThUniBib.git</url>
  </scm>

  <properties>
    <jackson.version>2.17.1</jackson.version>
    <jakarta.servlet-api.version>6.0.0</jakarta.servlet-api.version>
    <jdom.version>2.0.6.1</jdom.version>
    <jersey.client.version>3.1.3</jersey.client.version>
    <maven.compiler.release>17</maven.compiler.release>
    <mycore.version>2023.06.4-SNAPSHOT</mycore.version>
    <node.version>v16.19.1</node.version>
    <oaipmh.version>2.1</oaipmh.version>
    <solr.version>8.11.3</solr.version>
    <ubo.version>dev-SNAPSHOT</ubo.version>
    <yarn.version>v1.22.19</yarn.version>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
          <archive>
            <manifestEntries>
              <MCR-Artifact-Id>${project.artifactId}</MCR-Artifact-Id>
              <MCR-Application-Module>${project.name}</MCR-Application-Module>
              <Priority>99</Priority>
              <MCR-Auto-Deploy>true</MCR-Auto-Deploy>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.github.ekryd.sortpom</groupId>
        <artifactId>sortpom-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>verify-sort-pom</id>
            <goals>
              <goal>sort</goal>
            </goals>
            <phase>validate</phase>
            <configuration>
              <createBackupFile>false</createBackupFile>
              <expandEmptyElements>false</expandEmptyElements>
              <spaceBeforeCloseEmptyElement>true</spaceBeforeCloseEmptyElement>
              <keepBlankLines>true</keepBlankLines>
              <sortDependencies>${sortpom.sortDeps}</sortDependencies>
              <sortOrderFile>${sortpom.sortFile}</sortOrderFile>
              <sortProperties>true</sortProperties>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </repository>
    <repository>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <id>central-portal-snapshots</id>
      <name>Central Portal Snapshots</name>
      <url>https://central.sonatype.com/repository/maven-snapshots/</url>
    </repository>
  </repositories>

  <distributionManagement>
    <repository>
      <id>github</id>
      <name>GitHub ThULB Apache Maven Packages</name>
      <url>https://maven.pkg.github.com/ThULB/ThUniBib</url>
    </repository>
  </distributionManagement>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.mycore</groupId>
        <artifactId>mycore</artifactId>
        <version>${mycore.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-annotations</artifactId>
        <version>${jackson.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-core</artifactId>
        <version>${jackson.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>${jackson.version}</version>
      </dependency>
      <dependency>
        <groupId>de.uni-jena.thulb.ubo</groupId>
        <artifactId>thunibib-common</artifactId>
        <version>dev-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>jakarta.servlet</groupId>
        <artifactId>jakarta.servlet-api</artifactId>
        <version>${jakarta.servlet-api.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.solr</groupId>
        <artifactId>solr-solrj</artifactId>
        <version>${solr.version}</version>
      </dependency>
      <dependency>
        <groupId>org.glassfish.jersey.core</groupId>
        <artifactId>jersey-client</artifactId>
        <version>${jersey.client.version}</version>
      </dependency>
      <dependency>
        <groupId>org.glassfish.jersey.media</groupId>
        <artifactId>jersey-media-sse</artifactId>
        <version>${jersey.client.version}</version>
      </dependency>
      <dependency>
        <groupId>org.jdom</groupId>
        <artifactId>jdom2</artifactId>
        <version>${jdom.version}</version>
      </dependency>
      <dependency>
        <groupId>org.mycore</groupId>
        <artifactId>mycore-base</artifactId>
        <version>${mycore.version}</version>
      </dependency>
      <dependency>
        <groupId>org.mycore</groupId>
        <artifactId>mycore-mods</artifactId>
        <version>${mycore.version}</version>
      </dependency>
      <dependency>
        <groupId>org.mycore</groupId>
        <artifactId>mycore-orcid</artifactId>
        <version>${mycore.version}</version>
      </dependency>
      <dependency>
        <groupId>org.mycore</groupId>
        <artifactId>mycore-user2</artifactId>
        <version>${mycore.version}</version>
      </dependency>
      <dependency>
        <groupId>org.mycore</groupId>
        <artifactId>oaipmh</artifactId>
        <version>${oaipmh.version}</version>
      </dependency>
      <dependency>
        <groupId>org.mycore</groupId>
        <artifactId>oaipmh-harvester</artifactId>
        <version>${oaipmh.version}</version>
      </dependency>
      <dependency>
        <groupId>org.mycore.ubo</groupId>
        <artifactId>ubo-common</artifactId>
        <version>${ubo.version}</version>
      </dependency>
    </dependencies>

  </dependencyManagement>
  <modules>
    <module>common</module>
    <module>erfurt</module>
    <module>ilmenau</module>
    <module>jena-thulb</module>
    <module>jena</module>
    <module>nordhausen</module>
    <module>schmalkalden</module>
    <module>weimar</module>
  </modules>

</project>
